--- a/laravel/resources/css/_timegrid.scss
+++ b/laravel/resources/css/_timegrid.scss
@@ -19,6 +19,7 @@
         position: relative;
     
         .time {
+            padding-left: 0.5em;
             border-left: 1px solid #000;
         }
     }
@@ -80,14 +81,14 @@
     text-align: center;
     height: 1.75em;
     font-size: 12pt;
-    margin-left: -1.4em;
     overflow: hidden;
     text-overflow: ellipsis;
     cursor: pointer;
     min-width: 100px;
 
-    @media (min-width: 768px) {
+    @media (min-width: 992px) {
         min-width: 100%;
+        margin-left: -1.4em;
     }
 }
 
